--- a/src/styles/cardlist.css
+++ b/src/styles/cardlist.css
@@ -195,16 +195,18 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  border: 1px solid var(--accent-light);
-  background-color: var(--accent);
+  border: 1px solid var(--main-light);
+  background-color: var(--main);
   padding: 2px;
   padding-left: 10px;
   gap: 2px;
-  transition: right 0.3s ease;
+  transition: right 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
 }
 
-.card-menu:hover {
+.card-menu:hover, .card-wrapper:hover .card-menu {
   right: -35px;
+  background-color: var(--accent);
+  border-color: var(--accent-light);
 }
 
 .card-menu button {
